k8s/apps/default/autobrr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name autobrr
  labels:
    app: *name
spec:
  selector:
    matchLabels:
      app: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: *name
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      hostname: *name
      priorityClassName: cluster-p1
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups: [10000]
        seccompProfile: { type: RuntimeDefault }
      volumes:
        - name: tmp
          emptyDir: {}
        - name: config
          persistentVolumeClaim:
            claimName: autobrr
        - name: scripts
          configMap:
            name: autobrr-scripts
            defaultMode: 0775
        - name: cluster-ca-certificates
          configMap:
            name: cluster-ca-certificates.crt
            items:
              - key: ca-certificates.crt
                path: ca-certificates.crt
      containers:
        - name: autobrr
          image: ghcr.io/autobrr/autobrr:v1.88.0@sha256:e200008d43fe6cd2d944c9bcf20900cfb8ba8a8e509625bb78ee51910b994005
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
          ports:
            - containerPort: 80
              name: web
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              memory: 384Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: config
              mountPath: /config
            - name: scripts
              mountPath: /scripts
            - name: cluster-ca-certificates
              mountPath: /etc/ssl/certs/ca-certificates.crt
              subPath: ca-certificates.crt
              readOnly: true
          startupProbe:
            httpGet:
              path: /api/healthz/liveness
              port: web
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/healthz/liveness
              port: web
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/healthz/readiness
              port: web
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
