k8s/apps/default/autobrr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name autobrr
spec:
  ingressClassName: internal
  rules:
    - host: &host autobrr.holywoo.cbannister.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *name
                port:
                  name: http
  tls:
    - hosts:
        - *host
